# AI-DeepFake

./: .gitignore  GUI.py  README.md  evaluate.py  get_frames.py  main.py  model.py  pre_process.py  pre_process_data.py  predict.py  process_data.py  process_frame.py  process_vid.py  pyproject.toml  resnet50.ipynb  train.py
outdated/: outdated_evaluate.py  outdated_main.py  outdated_pre_process.py  outdated_resnet50.ipynb
runs/BCE_LR1e-3_EPOCH10/: events.out.tfevents.1713156258.sh.12152.3
runs/BCE_LR5e-4_EPOCH25/: events.out.tfevents.1713156260.sh.12152.4
runs/BCE_LR5e-4_EPOCH25_ES/: events.out.tfevents.1713156262.sh.12152.5
runs/EfficientNetB0_Adam_LR1e-3_WD0_DP0_EP15/: events.out.tfevents.1713156270.sh.12152.7
runs/EfficientNetB1_Adam_LR1e-3_WD0_DP0_EP15/: events.out.tfevents.1713156271.sh.12152.8
runs/EfficientNetB2_Adadelta_LR1e-3_WD0_DP0_EP15/: events.out.tfevents.1713156272.sh.12152.9
runs/EfficientNetB2_Adam_LR1e-3_WD0_DP0_EP15/: events.out.tfevents.1713156273.sh.12152.10
runs/EfficientNetB2_Adam_LR1e-3_WD1e-3_DP0_EP15/: events.out.tfevents.1713156275.sh.12152.11
runs/EfficientNetB2_Adam_LR1e-3_WD1e-4_DP0_EP15/: events.out.tfevents.1713156276.sh.12152.12
runs/EfficientNetB2_Adam_LR1e-3_WD1e-5_DP0_EP15/: events.out.tfevents.1713156278.sh.12152.13
runs/EfficientNetB2_Adam_LR1e-3_WD1e-6_DP0_EP15/: events.out.tfevents.1713156280.sh.12152.14
runs/EfficientNetB2_Adam_LR1e-3_WD1e-6_DP1e-2_EP15/: events.out.tfevents.1713156284.sh.12152.17
runs/EfficientNetB2_Adam_LR1e-3_WD1e-6_DP1e-5_EP15/: events.out.tfevents.1713156289.sh.12152.20
(+33 files in other folders)
