[tool.poetry]
package-mode = false
readme = "README.md"
# name = "ai-deepfake"
# version = "0.1.0"
# description = ""
# authors = ["eharnlee <eharnlee@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
tensorflow-io-gcs-filesystem = "0.27"
tensorflow = "2.10"
keras = "2.10"
cmake = "^3.29.0.1"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
